[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/flashbots/rbuilder"
repository = "https://github.com/flashbots/rbuilder"
exclude = [".github/"]

[workspace]
members = [
    "crates/rbuilder",
    "crates/op-rbuilder",
    "crates/reth-rbuilder",
    "crates/rbuilder/src/test_utils",
    "crates/rbuilder/src/telemetry/metrics_macros",
    "crates/eth-sparse-mpt",
    "crates/sysperf",
    "crates/test-relay",
]
default-members = ["crates/rbuilder", "crates/reth-rbuilder", "crates/test-relay"]
resolver = "2"

# Like release, but with full debug symbols. Useful for e.g. `perf`.
[profile.debug-fast]
inherits = "release"
debug = true

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[workspace.dependencies]
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-trie-parallel = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4", features = [
    "test-utils",
] }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-payload-builder-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-payload-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }

# reth optimism
reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-optimism-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-optimism-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }
reth-optimism-txpool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.4" }

# compatible with reth "v1.3.3" dependencies
revm = { version = "20.0.0-alpha.6", features = [
    "std",
    "secp256k1",
    "optional_balance_check",
], default-features = false }
revm-inspectors = "0.17.0-alpha.1"
op-revm = { version = "1.0.0-alpha.5", default-features = false }

ethereum_ssz_derive = "0.8"
ethereum_ssz = "0.8"

alloy-primitives = { version = "0.8.20", default-features = false }
alloy-rlp = "0.3.10"
alloy-chains = "0.1.64"
alloy-evm = { version = "0.1.0-alpha.3", default-features = false }
alloy-provider = { version = "0.12.6", features = ["ipc", "pubsub"] }
alloy-pubsub = { version = "0.12.6" }
alloy-eips = { version = "0.12.6" }
alloy-rpc-types = { version = "0.12.6" }
alloy-json-rpc = { version = "0.12.6" }
alloy-transport-http = { version = "0.12.6" }
alloy-network = { version = "0.12.6" }
alloy-network-primitives = { version = "0.12.6" }
alloy-transport = { version = "0.12.6" }
alloy-node-bindings = { version = "0.12.6" }
alloy-consensus = { version = "0.12.6", features = ["kzg"] }
alloy-serde = { version = "0.12.6" }
alloy-rpc-types-beacon = { version = "0.12.6", features = ["ssz"] }
alloy-rpc-types-engine = { version = "0.12.6", features = ["ssz"] }
alloy-rpc-types-eth = { version = "0.12.6" }
alloy-signer-local = { version = "0.12.6" }
alloy-rpc-client = { version = "0.12.6" }
alloy-genesis = { version = "0.12.6" }
alloy-trie = { version = "0.7.9" }

# optimism
alloy-op-evm = { version = "0.1.0-alpha.2", default-features = false }
op-alloy-rpc-types = { version = "0.11.2", default-features = false }
op-alloy-rpc-types-engine = { version = "0.11.2", default-features = false }
op-alloy-rpc-jsonrpsee = { version = "0.11.2", default-features = false }
op-alloy-network = { version = "0.11.2", default-features = false }
op-alloy-consensus = { version = "0.11.2", default-features = false }

async-trait = { version = "0.1.83" }
clap = { version = "4.4.3", features = ["derive", "env"] }
clap_builder = { version = "4.5.19" }
thiserror = { version = "1.0.64" }
eyre = { version = "0.6.12" }
jsonrpsee = { version = "0.24.4" }
jsonrpsee-types = { version = "0.24.4" }
parking_lot = { version = "0.12.3" }
tokio = { version = "1.40.0" }
auto_impl = { version = "1.2.0" }
reqwest = { version = "0.12.8" }
serde = { version = "1.0.210" }
serde_json = { version = "1.0.128" }
serde_with = { version = "3.8.1" }
secp256k1 = { version = "0.30" }
derive_more = { version = "2" }
tokio-stream = "0.1.16"
tokio-util = "0.7.12"
url = "2.5.2"
warp = "0.3.7"
flate2 = "1.0.35"
prometheus = "0.13.4"
ctor = "0.2"

libc = { version = "0.2.161" }
lazy_static = "1.4.0"
tikv-jemallocator = { version = "0.6" }
tracing = "0.1.37"
metrics = { version = "0.24.1" }
ahash = "0.8.6"
time = { version = "0.3.36", features = ["macros", "formatting", "parsing"] }

eth-sparse-mpt = { path = "crates/eth-sparse-mpt" }
rbuilder = { path = "crates/rbuilder" }
sysperf = { path = "crates/sysperf" }
metrics_macros = { path = "crates/rbuilder/src/telemetry/metrics_macros"}
